plugins/kotlin/idea/tests/testData/checker/regression/ClassDeclarationAsExpression.kt
val p = 1 < <error descr="[DECLARATION_IN_ILLEGAL_CONTEXT]">class A {
    fun f() {
        f()
    }
}</error>
